gcc/testsuite/gdc.test/fail_compilation/fail86.d
/*
TEST_OUTPUT:
---
fail_compilation/fail86.d(12): Error: alias `Foo` recursive alias declaration
---
*/

template Foo(TYPE) {}

void main()
{
    alias Foo!(int) Foo;
}
